// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should transform OntoUML <<mode>> class as ExtrinsicMode 1`] = `
"<https://example.com> <rdf:type> <owl:Ontology> .
<https://example.com> <owl:imports> <gufo:> .
[ <rdf:type> <owl:AllDisjointClasses> ] <owl:members> (<:Q5deWA6AUB0UtAWn> <:Q5deWA6AUB0UtAWo>) .
<:qJdeWA6AUB0UtAWm> <rdf:type> <owl:Class> .
<:qJdeWA6AUB0UtAWm> <rdf:type> <owl:NamedIndividual> .
<:qJdeWA6AUB0UtAWm> <rdfs:label> \\"Love\\" .
<:qJdeWA6AUB0UtAWm> <rdfs:subClassOf> <gufo:ExtrinsicMode> .
<:qJdeWA6AUB0UtAWm> <rdf:type> <gufo:Kind> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <owl:Class> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <owl:NamedIndividual> .
<:Q5deWA6AUB0UtAWn> <rdfs:label> \\"Person\\" .
<:Q5deWA6AUB0UtAWn> <rdfs:subClassOf> <gufo:FunctionalComplex> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <gufo:Kind> .
<:Q5deWA6AUB0UtAWo> <rdf:type> <owl:Class> .
<:Q5deWA6AUB0UtAWo> <rdf:type> <owl:NamedIndividual> .
<:Q5deWA6AUB0UtAWo> <rdfs:label> \\"Car\\" .
<:Q5deWA6AUB0UtAWo> <rdfs:subClassOf> <gufo:FunctionalComplex> .
<:Q5deWA6AUB0UtAWo> <rdf:type> <gufo:Kind> .
[ <rdf:type> <owl:AllDisjointClasses> ] <owl:members> (<:qJdeWA6AUB0UtAWm>) .
"
`;

exports[`should transform OntoUML <<mode>> class as IntrinsicMode 1`] = `
"<https://example.com> <rdf:type> <owl:Ontology> .
<https://example.com> <owl:imports> <gufo:> .
[ <rdf:type> <owl:AllDisjointClasses> ] <owl:members> (<:Q5deWA6AUB0UtAWn>) .
<:qJdeWA6AUB0UtAWm> <rdf:type> <owl:Class> .
<:qJdeWA6AUB0UtAWm> <rdf:type> <owl:NamedIndividual> .
<:qJdeWA6AUB0UtAWm> <rdfs:label> \\"Headache\\" .
<:qJdeWA6AUB0UtAWm> <rdfs:subClassOf> <gufo:IntrinsicMode> .
<:qJdeWA6AUB0UtAWm> <rdf:type> <gufo:Kind> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <owl:Class> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <owl:NamedIndividual> .
<:Q5deWA6AUB0UtAWn> <rdfs:label> \\"Person\\" .
<:Q5deWA6AUB0UtAWn> <rdfs:subClassOf> <gufo:FunctionalComplex> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <gufo:Kind> .
[ <rdf:type> <owl:AllDisjointClasses> ] <owl:members> (<:qJdeWA6AUB0UtAWm>) .
"
`;

exports[`should transform OntoUML generic model to gUFO 1`] = `
"@prefix : <https://example.com#>.
@prefix gufo: <http://purl.org/nemo/gufo#>.
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>.
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#>.
@prefix owl: <http://www.w3.org/2002/07/owl#>.

<https://example.com> rdf:type owl:Ontology;
    owl:imports gufo:.
[ rdf:type owl:AllDisjointClasses ] owl:members (:2uxhBA6AUB0UtArb :j5phBA6AUB0UtAts).
:rw.hBA6AUB0UtArB rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Agent\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:j5phBA6AUB0UtAts :2uxhBA6AUB0UtArb).
:rw.hBA6AUB0UtArB rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:Category;
    owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:j5phBA6AUB0UtAts :2uxhBA6AUB0UtArb)
].
:2uxhBA6AUB0UtArb rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Person\\";
    rdfs:subClassOf :rw.hBA6AUB0UtArB, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:j5phBA6AUB0UtAts rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Organization\\";
    rdfs:subClassOf :rw.hBA6AUB0UtArB, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:_xThBA6AUB0UtAvg rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"School\\";
    rdfs:subClassOf :j5phBA6AUB0UtAts.
[ rdf:type owl:AllDisjointClasses ] owl:members (:JLnhBA6AUB0UtAwO).
:_xThBA6AUB0UtAvg rdf:type gufo:SubKind.
:GDbhBA6AUB0UtAv1 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Student\\";
    rdfs:subClassOf :2uxhBA6AUB0UtArb;
    rdf:type gufo:Role.
:JLnhBA6AUB0UtAwO rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Enrollment\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:wukRBA6AUB0UtAxW rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Enrollment Date\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:wukRBA6AUB0UtAxW).
:wukRBA6AUB0UtAxW rdfs:subClassOf gufo:Quality;
    rdf:type gufo:Kind.
:h_Y9hA6GAqACnA1t rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Sophomore\\";
    rdfs:subClassOf :GDbhBA6AUB0UtAv1;
    rdf:type gufo:Role.
:cea9hA6GAqACnA2B rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Privately Enrolled\\";
    rdfs:subClassOf :GDbhBA6AUB0UtAv1;
    rdf:type gufo:Role.
:6XxdhA6GAqACnA0J rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Department\\";
    rdfs:subClassOf :j5phBA6AUB0UtAts;
    rdf:type gufo:SubKind.
"
`;
